syntax = "proto3";

service ResumeService {
  rpc CreateResume (Resume) returns (ResumeID);
  rpc GetResumes (GetResumesRequest) returns (Resumes);
  rpc UpdateResume (Resume) returns (Empty);
  rpc DeleteResume (ResumeID) returns (Empty);
}

message Resume {
  int32 id = 1;
  string name = 2;
  string skills = 3;
  string experience = 4;
  string contact_info = 5;
  repeated string tags = 6;
}

message ResumeID {
  int32 id = 1;
}

message GetResumesRequest {
  string filter = 1;
}

message Resumes {
  repeated Resume resumes = 1;
}

message Empty {}
